...

class RegistrationViewModel(navController: NavController, stateHolder: KarikaStateHolder) :
    CommonViewModel(navController, stateHolder) {
    private val repository = LoginRepository()

    override val title: String
        get() = "Registracija kupca"

    val companyName = mutableStateOf("")
    val companyId = mutableStateOf("")
    val companyPdv = mutableStateOf("")
    val companyEntity = mutableStateOf("")
    val companySize = mutableStateOf("")
...
