...
                CompanyInfo(component)
                ContactInfo(component)
                LoginInfo(component)
                Spacer(Modifier.height(20.dp))
                KPrimaryButton(
                    modifier = Modifier.fillMaxWidth(),
                    text = "Registruj se",
                    background = component.accent()
                ) {
                    component.register()
                }
                Row(
                    modifier = Modifier
...
