...

    if (component.isGuest()) {
        content(
            activeChild is MainChild.Home,
            vectorResource(Res.drawable.ic_k_home),
            vectorResource(Res.drawable.ic_k_home),
            "Početna"
        ) {
            component.navigate(MainConfig.Home)
        }
        content(
            activeChild is MainChild.Cart,
            vectorResource(Res.drawable.ic_k_cart),
...
